k8s/backend/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backend-permissive
  namespace: app-services
spec:
  selector:
    matchLabels:
      app: backend
  mtls:
    mode: PERMISSIVE
